; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_show_archive_command.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_show_archive_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XLogArchiveCommand = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [11 x i8] c"(disabled)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @show_archive_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @show_archive_command() #0 {
  %1 = alloca i8*, align 8
  %2 = call i64 (...) @XLogArchivingActive()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i8*, i8** @XLogArchiveCommand, align 8
  store i8* %5, i8** %1, align 8
  br label %7

6:                                                ; preds = %0
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %7

7:                                                ; preds = %6, %4
  %8 = load i8*, i8** %1, align 8
  ret i8* %8
}

declare dso_local i64 @XLogArchivingActive(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
